--- a/index.html
+++ b/index.html
@@ -7,30 +7,33 @@
   <title>Pagina Alugar</title>
 </head>
 <body>
+ <header>
+  <h1>LOCADORA DE CARROS</h1>
+ </header>
   
-  <div class="divPai">
-
+  <div class="container">
   <div class="divEsquerda">
-
+    <h3>Carro Cadastrado</h3>
+    <div class="carroCadastrado"></div>
   </div>
 
-
-
 <div class="divMeio">
-  <form action="">
-  <input class="input1" type="text">
-  <input class="input2" type="text">
-  <input class="input3" type="text">
-  <input class="input4" type="text">
-  <button class="botao">Enviar</button>
- </form>
+    <h3>Cadastrar Carro</h3>
+    <input class="marca" type="text" placeholder="marca">
+    <input class="modelo" type="text" placeholder="modelo">
+    <input class="ano" type="text" placeholder="ano">
+    <input class="cor" type="text" placeholder="cor">
+    <button class="botao">Enviar</button>
 </div>
 
 <div class="divDireita">
-
+  <h3>Carro alugado</h3>
+  <div class="carroAlugado"></div>
 </div>
 
 </div>
+
+
   <script src="index.js"></script>
 </body>
 </html>
