--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
   </div>
 
 <div class="divMeio">
-    <h3>Cadastrar Carro</h3>
-    <input class="marca" type="text" placeholder="marca">
-    <input class="modelo" type="text" placeholder="modelo">
-    <input class="ano" type="text" placeholder="ano">
-    <input class="cor" type="text" placeholder="cor">
+    <h3 id="animacaoTexto">Cadastrar Carro</h3>
+    <input class="marca" type="text" placeholder=" Marca">
+    <input class="modelo" type="text" placeholder=" Modelo">
+    <input class="ano" type="text" placeholder=" Ano">
+    <input class="cor" type="text" placeholder=" Cor">
     <button class="botao">Enviar</button>
 </div>
 
