--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <input class="modelo" type="text" placeholder=" Modelo">
     <input class="ano" type="text" placeholder=" Ano">
     <input class="cor" type="text" placeholder=" Cor">
-    <button class="botao">Enviar</button>
+    <button class="botao">Cadastrar</button>
 </div>
 
 <div class="divDireita">
